# gpt_karpathy

./: README.md  dev.ipynb  pyproject.toml
