[tool.poetry]
name = "gpt-karpathy"
version = "0.1.0"
description = ""
authors = ["kettarian <nikita.protsanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
